Color inversion added on navbar

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div id="navFor" class="navContents pointer">
                 <div class="navDropdownTitle">For &#11206;</div>
                 <div class="dropdown">
-                    <div class="dropdownItem">
+                    <div class="dropdownItem invertColorReverse">
                         <a href="">Children</a>
                     </div>
-                    <div class="dropdownItem">
+                    <div class="dropdownItem invertColorReverse">
                         <a href="">Men</a>
                     </div>
-                    <div class="dropdownItem">
+                    <div class="dropdownItem invertColorReverse">
                         <a href="">Women</a>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
             <div id="navBrands" class="navContents pointer">
                 <div class="navDropdownTitle">Brands &#11206;</div>
                 <div class="dropdown">
-                    <div class="dropdownItem">
+                    <div class="dropdownItem invertColorReverse">
                         <a href="">Nike</a>
                     </div>
                 </div>
